# worlds

./: .gitignore  README.md
api/: pyproject.toml
backend/: README.md  main.py  pyproject.toml
backend/api/: create_endpoints.py
backend/api/endpoints/: authenticate.py  character.py
backend/database/: core.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  logoutButton.tsx  navBar.tsx  not-found.ts  styles.module.css
frontend/app/(lib)/: authenticate.ts  disconnect.ts  session.ts
frontend/app/character/: page.tsx
frontend/app/game/: layout.tsx
frontend/app/game/[gameId]/character/: page.tsx
frontend/app/game/[gameId]/character/[characterId]/profile/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/login/: page.tsx
frontend/app/town/: page.tsx
