[tool.poetry]
name = "worlds"
version = "0.1.0"
description = "Web app for Role Playing Games"
authors = ["pinzen","viococo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
black = "^23.9.0"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
